--- a/packages/blog-starter-kit/themes/enterprise/.env.example
+++ b/packages/blog-starter-kit/themes/enterprise/.env.example
@@ -1,3 +1,4 @@
-NEXT_PUBLIC_HASHNODE_GQL_ENDPOINT=https://gql.hashnode.com
-NEXT_PUBLIC_HASHNODE_PUBLICATION_HOST=engineering.hashnode.com
-NEXT_PUBLIC_MODE=development
+NEXT_PUBLIC_HASHNODE_GQL_ENDPOINT=""
+NEXT_PUBLIC_HASHNODE_PUBLICATION_HOST=""    
+NEXT_PUBLIC_BASE_URL=""
+NEXT_PUBLIC_MODE=""
